--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-Hello World!!
-It's Takaki's Blog.
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Takaki's Blog</title>
+</head>
+<body>
+ 
+<h1>Hello World!!</h1>
+ 
+<p>It's Takaki's Blog.</p>
