--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Takaki's Blog</title>
+<title><link rel="icon" href="./favicon.ico" type="images/x-ico" />Takaki's Blog</title>
 </head>
 <body>
  
