--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title><link rel="icon" href="./favicon.ico" type="images/x-ico" />Takaki's Blog</title>
+<title>Takaki's Blog</title>
+<link rel="icon" href="favicon.ico" type="images/x-ico" />
 </head>
 <body>
  
